# MetaObject

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  MetaObjectConfig.cmake.in  README.md  metaobject_config.hpp.in
examples/console/: CMakeLists.txt  main.cpp  obj.cpp  obj.hpp
examples/console_recompile/: CMakeLists.txt  main.cpp  obj.cpp  obj.hpp
examples/python/: CMakeLists.txt  MetaPython.cpp  MetaPython.py
examples/qt_gui/: CMakeLists.txt
examples/qt_gui/include/: mainwindow.h
examples/qt_gui/src/: main.cpp  mainwindow.cpp
examples/qt_gui/ui/: mainwindow.ui
modules/core/: CMakeLists.txt
modules/core/examples/: fiber.cpp
modules/core/src/MetaObject/: Context.hpp  Demangle.cpp  IMetaObject.cpp  IMetaObject.hpp  IMetaObjectInfo.hpp  MetaObject.hpp  MetaObjectFactory.hpp  MetaObjectInfo.hpp  RelayManager.cpp  VariableManager.cpp  core.cpp  core.hpp  inter_thread.cpp  serializer.cpp
modules/core/src/MetaObject/Detail/: Allocator.hpp  AllocatorImpl.hpp  ConcurrentQueue.hpp  Enums.hpp  IMetaObjectImpl.hpp  IMetaObject_pImpl.hpp  MemoryBlock.hpp  MetaObjectMacrosImpl.hpp  Placeholders.hpp  StaticWarning.hpp
modules/core/src/MetaObject/core/: Allocator.cpp  Allocator.cu  AsyncStream.cpp  AsyncStream.hpp  AsyncStreamConstructor.cpp  AsyncStreamConstructor.hpp  AsyncStreamFactory.cpp  AsyncStreamFactory.hpp  Context.cpp  Context.hpp  ContextConstructor.hpp  CudaContext.cpp  CudaContext.hpp  CvContext.cpp  CvContext.hpp  Demangle.cpp  (+15 more)
modules/core/tests/: allocator.cpp  async_stream.cpp  context.cpp  detector_macros.cpp  enum_bitset.cpp  logging.cpp  main.cpp  system_table.cpp  test_signals.cpp  test_throw_on_destroy.cpp  thread.cpp  time.cpp
modules/cuda/: CMakeLists.txt
modules/cuda/src/MetaObject/: cuda.cpp  cuda.hpp
modules/cuda/tests/: allocator.cpp  async_stream.cpp  device_funcs.cu  device_funcs.hpp  device_synchronization.cpp  device_synchronization.cu  event.cpp  main.cpp
modules/cuda/tests2/: cuda_build.cu
modules/gui/: CMakeLists.txt
modules/metaparams/: CMakeLists.txt
modules/metaparams/src/MetaObject/: MetaParameters.cpp  MetaParameters.hpp  common.hpp  instantiations_1.cpp  instantiations_2.cpp  instantiations_3.cpp  instantiations_4.cpp  instantiations_5.cpp  instantiations_6.cpp
modules/object/: CMakeLists.txt
modules/object/src/MetaObject/: object.hpp
modules/object/tests/: Objects.cpp  Objects.hpp  main.cpp  test_inheritance.cpp  test_meta_object.cpp  test_parameter_object.cpp  test_serialization.cpp
modules/object/tests/plugin/: Objects.cpp  Objects.hpp  TestObjects.cpp  TestObjects.hpp
modules/object/tests/unit_tests/: initialization.cpp  main.cpp  obj.cu  serialization.cpp  signals.cpp  slots.cpp  static_reflection.cpp  test_inheritance.cpp  test_meta_object.cpp  test_meta_object.cpp.autosave  test_parameter_object.cpp  test_recompile.cpp  test_serialization.cpp
modules/params/: CMakeLists.txt  README.md
modules/params/src/MetaObject/: params.cpp  params.hpp
modules/params/tests/: allocator.cpp  basic_typed.cpp  buffer.cpp  main.cpp  named_parameter.cpp  param_print.cpp  polymorphic_input.cpp  pubsub.cpp  reflect_pod.cpp  runtime_reflect.cpp  tdata_allocator.cpp  test_control_param.cpp  test_publisher.cpp
modules/python/: CMakeLists.txt  metaobject.py.in.unix  metaobject.py.in.win32
modules/python/cmake/: .FindNumPy.cmake.swp  FindNumPy.cmake
modules/python/src/MetaObject/: Python.hpp
modules/python/tests/: python_init_param_setter.cpp  test_python.py
modules/runtime_reflection/: CMakeLists.txt
modules/runtime_reflection/src/MetaObject/: runtime_reflection.cpp  runtime_reflection.hpp
modules/runtime_reflection/tests/: common.hpp  static.cpp  static_checks.cpp  traits.cpp
modules/serialization/: CMakeLists.txt
modules/serialization/src/MetaObject/: serialization.hpp
modules/serialization/tests/: binary.cpp  common.hpp  json.cpp  main.cpp  print.cpp  serialization_test.cpp
modules/serialization/tests/virtual_visitor/: CMakeLists.txt  print.cpp
modules/types/: CMakeLists.txt
modules/types/src/MetaObject/: types.hpp
modules/types/tests/: enumeration.cpp  main.cpp  test_mo_small_vec.cpp
modules/visitation/: CMakeLists.txt
modules/visitation/src/MetaObject/: visitation.hpp
modules/visitation/tests/: common.hpp  main.cpp  print.cpp  static.cpp  static_checks.cpp  traits.cpp
tests/: CMakeLists.txt  Test.vcxproj.user.in  test_meta_object.cpp  test_parameter.cpp  test_parameter_object.cpp  test_recompile.cpp  test_signals.cpp
tests/allocator/: main.cpp
tests/buffers/: test_buffers.cpp
tests/detector_macros/: main.cpp
tests/inheritance/: test_inheritance.cpp
tests/logging/: test_logging.cpp
tests/meta_object/: test_meta_object.cpp
tests/multi_translation_unit/: tr1.cpp  tr2.cpp
tests/named_parameter/: main.cpp
tests/parameter/: test_parameter.cpp
tests/parameter_object/: test_parameter_object.cpp
tests/recompile/: CMakeLists.txt  obj.cpp  obj.h  test_recompile.cpp
tests/serialization/: test_serialization.cpp
tests/system_table/: test_system_table.cpp
tests/test_allocator/: main.cpp
tests/test_buffers/: test_buffers.cpp
tests/test_detector_macros/: main.cpp
tests/test_inheritance/: test_inheritance.cpp
tests/test_logging/: test_logging.cpp
tests/test_meta_object/: test_meta_object.cpp
tests/test_multi_translation_unit/: tr1.cpp  tr2.cpp
tests/test_named_parameter/: main.cpp
tests/test_parameter/: test_parameter.cpp
tests/test_parameter_object/: test_parameter_object.cpp
tests/test_recompile/: CMakeLists.txt  obj.cpp  obj.cu  obj.h  test_recompile.cpp
tests/test_serialization/: test_serialization.cpp
tests/test_signals/: test_signals.cpp
tests/test_system_table/: test_system_table.cpp
tests/test_threads/: test_threads.cpp
tests/test_throw_on_destroy/: test_throw_on_destroy.cpp
tests/test_zmq_client/: client.cpp
tests/test_zmq_server/: server.cpp
tests/threads/: test_threads.cpp
tests/throw_on_destroy/: test_throw_on_destroy.cpp
tests/zmq_client/: client.cpp
tests/zmq_server/: server.cpp
(+990 files in other folders)
